--- a/w4-movie/index.html
+++ b/w4-movie/index.html
@@ -31,8 +31,8 @@
     <p>
         Set in a dystopian America, <em>The Long Walk</em> follows fifty teenage boys chosen to compete in a deadly endurance contest. They must walk at least 3 miles per hour—if they slow down too long or too often, they are “eliminated." The last walker standing wins anything he desires. The film explores psychological endurance, fear, and the cost of survival.
     </p>
-    <img src="./images/the-long-walk.jpg"alt="The long walk movie poster" width="300">
-    <figcaption>Theatrical release poster</figcaption>
+    <img src="./images/the-long-walk.jpg" alt="The long walk movie poster" width="300">
+    
     
     <div class="info">
         <p><strong>Company Credits:</strong> Lionsgate, Temple Hill Entertainment</p>
@@ -46,7 +46,7 @@
     <div id="footer">
         <a href="#header">Back to Top</a><br>
     <p>HTML Validation Screenshot:</p>
-    <img src="" alt="Validation Screenshot" width="300">
+    <img src="./images/the-long-walk.jpg" alt="Validation Screenshot" width="300">
     </div>
 </div>
 </body>
