--- a/w4-movie/index.html
+++ b/w4-movie/index.html
@@ -46,7 +46,7 @@
     <div id="footer">
         <a href="#header">Back to Top</a><br>
     <p>HTML Validation Screenshot:</p>
-    <img src="./images/the-long-walk.jpg" alt="Validation Screenshot" width="300">
+    <img src="./images/validation-screenshot.png" alt="Validation Screenshot" width="300">
     </div>
 </div>
 </body>
