--- a/w4-movie/index.html
+++ b/w4-movie/index.html
@@ -4,11 +4,11 @@
     <!--
     Name: Gerson Varga
     Section ID: SE111
-    Date: 10/13/2025
+    Date: 10/26/2025
     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A personal biography webpage about Gerson Vargas, including schooling and hobbies.">
+    <meta name="description" content="Movie review of the 2025 film The long walk and 2015 film Legend">
     <meta name="author" content="Gerson Vargas">
     <title>The Long Walk</title>
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
     <div id="container"> 
         <hr>
         <div id="header">
-        <h1><em>The Long Walk</em></h1>
+        <h1><em>The Long Walk</em> & <em>Legend</em></h1>
     </div>
     <div id="nav">
         <a href="./index.html">Home</a> |
@@ -41,8 +41,26 @@
         <p><strong>Rating:</strong> R</p>
         <p><strong>Running Time:</strong> 1h 48m</p>
     </div>
+</section>
+<hr>
+<section>
+    <h3><em>Legend</em></h3>
+    <p>
+        <em>Legend</em> is a British crime drama film that tells the rise and fall of the notorious Kray twins-Reggie and Ronnie-who rules London's East End in the 1960s. 
+        Played by Tom Hardy in a dual performance, the film captures glamour, violence, and brotherly tension that shaped their empire.
+    </p>
+    <img src="./images/Legend.jpg" alt="Legend 2015 movie poster" width="300">
+    <div class="info">
+        <p><strong>Company Credits:</strong> StudioCanal, Working Title Films, Cross Pictures</p>
+        <p><strong>Release Date:</strong> September 9, 2015</p>
+        <p><strong>Genres:</strong> Biography, Crime, Drama</p>
+        <p><strong>Rating:</strong> R</p>
+        <p><strong>Running Time:</strong> 2h 12m</p>
+    </div>
+</section>
 </div>
-    <hr>
+
+<hr>
     <div id="footer">
         <a href="#header">Back to Top</a><br>
     <p>HTML Validation Screenshot:</p>
