--- a/w4-movie/review.html
+++ b/w4-movie/review.html
@@ -4,11 +4,11 @@
     <!--
     Name: Gerson Varga
     Section ID: SE111
-    Date: 10/13/2025
+    Date: 10/26/2025
     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A personal biography webpage about Gerson Vargas, including schooling and hobbies.">
+    <meta name="description" content="Review of the 2025 movie The Long Walk">
     <meta name="author" content="Gerson Vargas">
     <title>The Long Walk</title>
     <link rel="stylesheet" href="style.css">
