--- a/w4-movie/index.html
+++ b/w4-movie/index.html
@@ -21,8 +21,10 @@
     </div>
     <div id="nav">
         <a href="./index.html">Home</a> |
-        <a href="./cast.html">Cast</a> |
-        <a href="./review.html">Review</a>
+        <a href="./cast.html">The Long Walk Cast</a> |
+        <a href="./review.html">The Long Walk Review</a> |
+        <a href="./cast2.html">Legend Cast</a> |
+        <a href="./review2.html">Legend Review</a>
     </div>
     
     <hr>
